# TinyEngine

./: CMakeLists.txt  README.md  compile_shaders.bat  generate_windows.bat
Resource/Shaders/: shader.vert
Source/Core/: CMakeLists.txt
Source/Core/Android/: AndroidPlatformMisc.cpp  AndroidPlatformMisc.h
Source/Core/GenericPlatform/: GenericPlatformMisc.cpp  GenericPlatformMisc.h
Source/Core/HAL/: PlatformMisc.h
Source/Core/Windows/: WindowsPlatformMisc.cpp  WindowsPlatformMisc.h
Source/Launch/: Launch.cpp
Source/Launch/Android/: LaunchAndroid.cpp
Source/Launch/Windows/: LaunchWindows.cpp
